[metadata]
name = ppuda
version = 1.0.0
description = Parameter Prediction for Unseen Deep Architectures (NeurIPS 2021)
author = Boris Knyazev, Michal Drozdzal, Graham Taylor, Adriana Romero-Soriano
author_email = borknyaz@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/facebookresearch/ppuda
project_urls =
    Bug Tracker = https://github.com/facebookresearch/ppuda/issues
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    einops
    matplotlib
    tqdm
    h5py
    networkx>=2.4
    torch>=1.9.0
    torchvision>=0.10.0
packages =
    ppuda
    ppuda.ghn
    ppuda.deepnets1m
    ppuda.utils
    ppuda.vision
python_requires = >=3.6
